# Preparcial-Final

./: Dockerfile  Dockerfile.test  docker-compose.test.yml  main.py  package.json  pyproject.toml
.github/workflows/: ci.yml
cypress/e2e/: carrito.cy.js
src/: main.py
src/carrito/: api.py
src/database/: config.py  models.py  repositorio.py
tests/: conftest.py
tests/integration/: test_api_integracion.py  test_repositorio_db.py
tests/system/: test_sistema_e2e.py
