[project]
name = "Preparcial-Final"
version = "0.1.0"
description = "Proyecto generado automaticamente con TDD y BDD"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg[binary]",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0.0",
    "pytest-bdd>=7.0.0",
    "pytest-cov>=4.1.0",
    "testcontainers>=4.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "smoke: Pruebas rapidas criticas",
    "regression: Pruebas de regresion completas"
]
